turtleart.housetree.HouseTree.scala.error
Compilation error:
HouseTree:3: error: not found: value polygone
  polygone(4,longeur,0)
  ^HouseTree:5: error: not found: value polygone
  polygone(3,longeur,30)
  ^