turtleart.housetree.HouseTree.scala.code
def maison(longeur:Double) {
  
  polygone(4,longeur,0)
  avance(100)
  polygone(3,longeur,30)
  gauche(30)
  recule(longeur)
  
}

override def run() {
  
  for (c <- 1 to 4) {
    
    maison(30)
    droite(90)
    avance(50)
    gauche(90)
    
  }
  
}